feat: 完善模块菜单引导与动态业务使用闭环 (#301)
* feat: 完善模块菜单引导与动态业务使用闭环

* fix: 复用既有动态模块启动恢复与故障隔离